@@ -38,11 +38,11 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.time.OffsetDateTime;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
 import static org.mockito.ArgumentMatchers.any;
@@ -65,6 +65,7 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
     private static final String EMAIL = "jerome.leleu@vitamui.com";
 
     private static final String SUPER_USER_EMAIL = "sub.rogateur@vitamui.com";
+    private static final String SUPER_USER_CUSTOMER_ID = "superAdminCustomerId";
 
     private static final String PASSWORD = "password";
 
@@ -175,15 +176,17 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setStatus(UserStatusEnum.ENABLED);
         user.setLevel("DEV");
 
-        when(internalUserService.findUserByEmail(EMAIL)).thenReturn(user);
+        when(internalUserService.findUsersByEmail(EMAIL)).thenReturn(List.of(user));
         final AuthUserDto userProfile = new AuthUserDto();
         userProfile.setProfileGroup(new GroupDto());
         when(internalUserService.loadGroupAndProfiles(user)).thenReturn(userProfile);
         when(tokenRepository.generateSuperId()).thenReturn("en");
-        final AuthUserDto result = (AuthUserDto) controller.getUserByEmail(EMAIL, Optional.of(CommonConstants.AUTH_TOKEN_PARAMETER));
+        final List<UserDto> results =
+            controller.getUsersByEmail(EMAIL, CommonConstants.AUTH_TOKEN_PARAMETER);
 
+        assertThat(results).hasSize(1);
         userProfile.setAuthToken("TOKEN");
-        assertEquals(userProfile, result);
+        assertEquals(userProfile, results.get(0));
         verify(tokenRepository, times(1)).save(any());
     }
 
@@ -192,7 +195,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setPassword(passwordEncoder.encode(PASSWORD));
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword(PASSWORD);
         controller.login(request);
         verify(casService).updateNbFailedAttempsPlusLastConnectionAndStatus(user, 0, UserStatusEnum.ENABLED);
@@ -206,7 +210,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setPassword(passwordEncoder.encode(PASSWORD));
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword(PASSWORD);
         controller.login(request);
         verify(casService).updateNbFailedAttempsPlusLastConnectionAndStatus(user, 0, UserStatusEnum.ENABLED);
@@ -219,7 +224,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setPassword(passwordEncoder.encode(PASSWORD));
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword(PASSWORD);
         controller.login(request);
         verify(casService).updateNbFailedAttempsPlusLastConnectionAndStatus(user, 0, UserStatusEnum.ENABLED);
@@ -232,7 +238,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setPassword(passwordEncoder.encode(PASSWORD));
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword(PASSWORD);
         try {
             controller.login(request);
@@ -250,7 +257,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
         user.setPassword(passwordEncoder.encode("badPassword"));
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword(PASSWORD);
         controller.login(request);
     }
@@ -259,7 +267,8 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
     public void testLoginKoBlankPasswords() {
         user.setType(UserTypeEnum.NOMINATIVE);
         final LoginRequestDto request = new LoginRequestDto();
-        request.setUsername(EMAIL);
+        request.setLoginEmail(EMAIL);
+        request.setLoginCustomerId(CUSTOMER_ID);
         request.setPassword("");
         try {
             controller.login(request);
@@ -283,9 +292,11 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
     @Test
     public void testFindSubrogationsBySuperUserId() {
         final Subrogation subrogation = buildSubrogation();
-        when(subrogationRepository.findBySuperUser(SUPER_USER_EMAIL)).thenReturn(Arrays.asList(subrogation));
+        when(subrogationRepository.findBySuperUserAndSuperUserCustomerId(SUPER_USER_EMAIL, SUPER_USER_CUSTOMER_ID))
+            .thenReturn(List.of(subrogation));
         final UserDto user = new UserDto();
         user.setEmail(SUPER_USER_EMAIL);
+        user.setCustomerId(SUPER_USER_CUSTOMER_ID);
         user.setStatus(UserStatusEnum.ENABLED);
         when(internalUserService.getOne(ID, Optional.empty())).thenReturn(user);
 
@@ -302,9 +313,11 @@ public final class CasControllerTest extends AbstractServerIdentityBuilder {
     @Test
     public void testFindSubrogationsBySuperUserEmail() {
         final Subrogation subrogation = buildSubrogation();
-        when(subrogationRepository.findBySuperUser(SUPER_USER_EMAIL)).thenReturn(Arrays.asList(subrogation));
+        when(subrogationRepository.findBySuperUserAndSuperUserCustomerId(SUPER_USER_EMAIL, SUPER_USER_CUSTOMER_ID))
+            .thenReturn(List.of(subrogation));
 
-        final List<SubrogationDto> subrogations = controller.getSubrogationsBySuperUserEmail(SUPER_USER_EMAIL);
+        final List<SubrogationDto> subrogations = controller
+            .getSubrogationsBySuperUserEmailAndCustomerId(SUPER_USER_EMAIL, SUPER_USER_CUSTOMER_ID);
         assertEquals(1, subrogations.size());
         final SubrogationDto dto = subrogations.get(0);
         assertEquals(subrogation.getId(), dto.getId());
